# pagebot

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
_frontend/: tailwind.config.ts
_frontend/app/: root.tsx  tailwind.css
_frontend/frontend/: package-lock.json  package.json  tailwind.config.ts
api/: Cargo.toml  deploy.sh  deploy_dev.sh  stats.txt
api/src/: auth.rs  embed_pool.rs  jwt.rs  lemonsqueezy.rs  llm_retrieval.rs  main.rs  notification.rs  openai.rs  stats.rs  token_map.rs
api/src/db/: mod.rs
api/src/email_templates/: daily_stats.html  forwarding.html  forwarding_message.html  knowledge_gap.html  mod.rs  source_error.html
api/src/routes/: macros.rs  mod.rs
api/src/routes/get/: benchmark.rs  checkout_session.rs  me.rs  mod.rs  stats.rs
api/src/routes/post/: domains.rs  email.rs  email_request.rs  jwt.rs  login.rs  ls_webhook.rs  message.rs  mod.rs  stripe_webhook.rs
api/src/types/: history_item.rs  message.rs  mod.rs  perf.rs  source.rs  usage.rs  user.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: Home.tsx  layout.tsx  page.tsx  providers.tsx
frontend/components/: CTA.tsx  Calculator.tsx  Card.tsx  CodeSnippet.tsx  FaqSection.tsx  GetStarted.tsx  Navigation.tsx  Section1.tsx  Section2.tsx  SectionIconTitle.tsx  documentation.tsx  features.tsx  icons.tsx  intro.tsx  pricing.tsx  primitives.ts  section.tsx  you.tsx
frontend/config/: fonts.ts  site.ts
rag_retrieval/: Cargo.toml
src/: animations.css  index.html  index.ts  normalize.css  ui.css  ui.min.css  ui.tsx  ui_backup.css
(+8 files in other folders)
