[package]
name = "pagebotapi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
hashbrown = "0.14.0"
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6.7", features = ["headers", "macros"] }
heed = { version = "0.11.0", default-features = false, features = ["mdbx"] }
eyre = "0.6.8"
rand = "0.8.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tower = { version = "0.4.13" }
tower-http = { version = "0.3.5", features = ["cors"] }
chrono = "0.4.23"
lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["json"] }
color-eyre = "0.5"
async-stripe = { version = "0.22.2", default-features = false, features = [
    "runtime-tokio-hyper",
    # "billing",
    "checkout",
    "webhook-events",
    "connect",
] }
jsonwebtoken = "8.2.0"
env_logger = "0.10.0"
log = "0.4.17"
async-trait = "0.1.61"
serde_json = "1.0.104"
serde-email = "1.3.0"
url_serde = "0.2.0"
pdf-extract = "0.6.5"
serde-aux = "4.2.0"
async-openai = "0.13.0"
async-stream = "0.3.5"
scraper = "0.17.1"
qdrant-client = "1.4.0"
